--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,10 +25,11 @@
     "\n",
     "class Category:\n",
     "    def __init__(self, \n",
+    "                 homsets:dict,\n",
     "                 src:dict, \n",
     "                 target:dict, \n",
     "                 comp:dict, \n",
-    "                 identityMap:dict = {}, \n",
+    "                 identityMap:dict, \n",
     "                 debug:bool = False) -> None:\n",
     "        self.src = src\n",
     "        self.target = target\n",
@@ -37,11 +38,22 @@
     "        self.morphisms = list(src.keys())\n",
     "        self.identityMap = identityMap\n",
     "        self.debug = debug\n",
-    "        self.homsets = {}\n",
+    "        self.homsets = homsets\n",
+    "\n",
+    "        # if data given as homsets then make the source and target dictionaries\n",
+    "        if self.homsets != {}:\n",
+    "            self.sourceAndTargetMake()\n",
     "\n",
     "        # if no identities are given add identities\n",
     "        if identityMap == {}:\n",
     "            self.addIdentities()\n",
+    "\n",
+    "        # complete data in src, target, comp for identities\n",
+    "        self.completeIdentities()\n",
+    "\n",
+    "        # if data given as src and target dictionaries then make the homsets\n",
+    "        if self.homsets == {}:\n",
+    "            self.homsetMake()\n",
     "\n",
     "        # verify essential properties\n",
     "        assert set(identityMap.keys()) == self.objects\n",
@@ -49,14 +61,19 @@
     "        assert self.composabilityCheck()\n",
     "        assert self.compositionCheck()\n",
     "        assert self.associativityCheck()\n",
-    "\n",
-    "        self.homsetMake()\n",
     "        \n",
     "    def __repr__(self) -> str:\n",
     "        return self.__str__()\n",
     "    \n",
     "    def __str__(self) -> str:\n",
     "        return str((self.src, self.target, self.comp))\n",
+    "    \n",
+    "    def sourceAndTargetMake(self) -> None:\n",
+    "        for (src,target), morphismList in self.homsets.items():\n",
+    "            for thisMorphism in morphismList:\n",
+    "                self.src[thisMorphism] = src\n",
+    "                self.target[thisMorphism] = target\n",
+    "\n",
     "\n",
     "    # given identityMap, fill out missing data in src, target, comp\n",
     "    def completeIdentities(self) -> None:\n",
@@ -66,7 +83,7 @@
     "            self.target[thisMorphism] = thisObject\n",
     "            if thisMorphism not in self.morphisms:\n",
     "                self.morphisms = self.morphisms + [thisMorphism]\n",
-    "            self.identityMap[thisObject] = thisMorphism\n",
+    "            #self.identityMap[thisObject] = thisMorphism\n",
     "            for i in self.morphisms:\n",
     "                if self.src[i] == thisObject:\n",
     "                    self.comp[(i, thisMorphism)] = i\n",
@@ -113,7 +130,6 @@
     "        for thisObject in self.objects:\n",
     "            thisMorphism = \"id_\" + str(thisObject)\n",
     "            self.identityMap[thisObject] = thisMorphism\n",
-    "        self.completeIdentities()\n",
     "\n",
     "    def homsetMake(self) -> None:\n",
     "\n",
@@ -199,11 +215,12 @@
     "# comp: (A: zeroCell, B: zeroCell, C: zeroCell) ---> functor ( Hom(B,C)) x Hom(A, B) --> Hom(A, C) )\n",
     "\n",
     "class StrictTwoCategory:\n",
-    "    def __init__(self, zeroCells:list, hom:dict, identityMap:dict, comp:dict) -> None:\n",
+    "    def __init__(self, zeroCells:list, hom:dict, identityMap:dict, comp:dict, debug:bool=False) -> None:\n",
     "        self.zeroCells = zeroCells\n",
     "        self.hom = hom\n",
     "        self.identityMap = identityMap\n",
     "        self.comp = comp\n",
+    "        self.debug = debug\n",
     "\n",
     "        # verify essential properties\n",
     "        assert self.identityOneCell()\n",
@@ -229,6 +246,8 @@
     "                    thisOneCellMap = thisCompositionFunctor.objectMap\n",
     "                    for thisOneCell in self.hom[(zeroCell, thisZeroCell)].objects:\n",
     "                        if thisOneCellMap[(thisIdentityOneCell, thisOneCell)] != thisOneCell:\n",
+    "                            if self.debug:\n",
+    "                                print(\"Identity violation for one cells...\")\n",
     "                            return False\n",
     "                        \n",
     "                # identity morphism is first\n",
@@ -237,6 +256,8 @@
     "                    thisOneCellMap = thisCompositionFunctor.objectMap\n",
     "                    for thisOneCell in self.hom[(thisZeroCell, zeroCell)].objects:\n",
     "                        if thisOneCellMap[(thisOneCell, thisIdentityOneCell)] != thisOneCell:\n",
+    "                            if self.debug:\n",
+    "                                print(\"Identity violation for one cells...\")\n",
     "                            return False\n",
     "                        \n",
     "        return True\n",
@@ -256,6 +277,8 @@
     "                    thisTwoCellMap = thisCompositionFunctor.morphismMap\n",
     "                    for thisTwoCell in self.hom[(zeroCell, thisZeroCell)].morphisms:\n",
     "                        if thisTwoCellMap[(thisIdentityTwoCell, thisTwoCell)] != thisTwoCell:\n",
+    "                            if self.debug:\n",
+    "                                print(\"Identity violation for two cells...\")\n",
     "                            return False\n",
     "                        \n",
     "                # identity morphism is first\n",
@@ -264,6 +287,8 @@
     "                    thisTwoCellMap = thisCompositionFunctor.morphismMap\n",
     "                    for thisTwoCell in self.hom[(thisZeroCell, zeroCell)].morphisms:\n",
     "                        if thisTwoCellMap[(thisTwoCell, thisIdentityTwoCell)] != thisTwoCell:\n",
+    "                            if self.debug:\n",
+    "                                print(\"Identity violation for two cells...\")\n",
     "                            return False\n",
     "        \n",
     "        return True\n",
@@ -285,6 +310,8 @@
     "                                        abcFirst = bcdOneCellMap[(cdOneCell, abcOneCellMap[(bcOneCell, abOneCell)])]\n",
     "                                        bcdFirst = abcOneCellMap[(bcdOneCellMap[(cdOneCell, bcOneCell)], abOneCell)]\n",
     "                                        if abcFirst != bcdFirst:\n",
+    "                                            if self.debug:\n",
+    "                                                print(\"Associative violation for one cells...\")\n",
     "                                            return False\n",
     "                                        \n",
     "        return True\n",
@@ -306,6 +333,8 @@
     "                                        abcFirst = bcdTwoCellMap[(cdTwoCell, abcTwoCellMap[(bcTwoCell, abTwoCell)])]\n",
     "                                        bcdFirst = abcTwoCellMap[(bcdTwoCellMap[(cdTwoCell, bcTwoCell)], abTwoCell)]\n",
     "                                        if abcFirst != bcdFirst:\n",
+    "                                            if self.debug:\n",
+    "                                                print(\"Associative violation for two cells...\")\n",
     "                                            return False\n",
     "                                        \n",
     "        return True\n",
@@ -319,7 +348,7 @@
     "    target = targetProduct(c, d)\n",
     "    comp = compProduct(c,d)\n",
     "    identityMap = identityMapProduct(c,d)\n",
-    "    productCat = Category(src, target, comp, identityMap)\n",
+    "    productCat = Category({}, src, target, comp, identityMap)\n",
     "    return productCat\n",
     "\n",
     "# construct the source dictionary for the product\n",
@@ -352,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,8 +390,8 @@
     "target = {\"f\":1, \"g\":2, \"h\":3, \"i\":2, \"m\":3, \"k\":3}\n",
     "comp = {(\"g\",\"f\"): \"i\", (\"h\", \"g\"):\"k\", (\"h\",\"i\"): \"m\", (\"k\",\"f\"): \"m\"}\n",
     "\n",
-    "c1 = Category(src, target, comp, {})\n",
-    "c2 = Category(src, target, comp, {})\n",
+    "c1 = Category({}, src, target, comp, {})\n",
+    "c2 = Category({}, src, target, comp, {})\n",
     "\n",
     "productC1C2 = productCategory(c1, c2)\n",
     "\n",
@@ -390,7 +419,7 @@
     "        (\"id0\", \"id0\"): \"id0\",\n",
     "        (\"id1\", \"id1\"): \"id1\"}\n",
     "\n",
-    "c3 = Category(src, target, comp, {0:\"id0\", 1:\"id1\"}, debug=True)"
+    "c3 = Category({}, src, target, comp, {0:\"id0\", 1:\"id1\"}, debug=True)"
    ]
   },
   {
@@ -407,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +453,7 @@
        "})"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +465,7 @@
     "src = {\"2_00_1\": \"1_0\", \"2_00_0\": \"1_0\"}\n",
     "target = {\"2_00_1\": \"1_0\", \"2_00_0\": \"1_0\"}\n",
     "comp = {(\"2_00_0\", \"2_00_0\"):\"2_00_0\", (\"2_00_0\", \"2_00_1\"): \"2_00_1\", (\"2_00_1\", \"2_00_0\"): \"2_00_1\", (\"2_00_1\", \"2_00_1\"): \"2_00_0\"}\n",
-    "z2 = Category(src, target, comp, {\"1_0\": \"2_00_0\"})\n",
+    "z2 = Category({}, src, target, comp, {\"1_0\": \"2_00_0\"})\n",
     "\n",
     "# Notation: 0_1 is the 0-cell with index 1\n",
     "zeroCells = [\"0_0\",\"0_1\"]\n",
@@ -460,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,41 +517,8 @@
     "        objectMap.append(targetPair)\n",
     "\n",
     "    objectMap = dict(list(set(objectMap)))\n",
-    "    return objectMap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'1_0': 0}\n",
-      "{'2_00_1': 'id_0', '2_00_0': 'id_0'}\n",
-      ", {'1_0': 1}\n",
-      "{'2_00_1': 'id_1', '2_00_0': 'id_1'}\n",
-      ", {'1_0': 2}\n",
-      "{'2_00_1': 'id_2', '2_00_0': 'id_2'}\n",
-      ", {'1_0': 3}\n",
-      "{'2_00_1': 'id_3', '2_00_0': 'id_3'}\n",
-      "]\n"
-     ]
-    }
-   ],
-   "source": [
-    "functorList = enumerateFunctorsByMorphism(z2, c1, 0)\n",
-    "print(functorList)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return objectMap\n",
+    "\n",
     "def enumerateFunctorsByObject(c:Category, d:Category, numToFind: int=0) -> list:\n",
     "    functorList = []\n",
     "    allObjectFunctions = itertools.product(d.objects, repeat=len(c.objects))\n",
@@ -564,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -648,6 +644,124 @@
    "source": [
     "functorList = enumerateFunctorsByObject(c1, c1, 0)\n",
     "print(functorList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'1_0': '1_0'}\n",
+      "{'2_00_1': '2_00_1', '2_00_0': '2_00_0'}\n",
+      ", {'1_0': '1_0'}\n",
+      "{'2_00_1': '2_00_0', '2_00_0': '2_00_0'}\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "functorList = enumerateFunctorsByMorphism(z2, z2, 0)\n",
+    "print(functorList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# utility function for prepending strings in dictionary keys and values\n",
+    "def prependDictionary(myDict:dict, preString:str):\n",
+    "    newDict = {}\n",
+    "    for key, value in list(myDict.items()):\n",
+    "        if type(key) == tuple:\n",
+    "            newKey = tuple([preString + i for i in key])\n",
+    "        elif type(key) == str:\n",
+    "            newKey = preString + key\n",
+    "        else:\n",
+    "            print(\"Prepend warning...\")\n",
+    "\n",
+    "        if type(value) == tuple:\n",
+    "            newValue = tuple([preString + i for i in value])\n",
+    "        elif type(value) == str:\n",
+    "            newValue = preString + value\n",
+    "        else:\n",
+    "            print(\"Prepend warning...\")\n",
+    "        \n",
+    "        newDict[newKey] = newValue\n",
+    "    return newDict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def enumerate2Categories(zeroCells: list, hom:dict, identityMap:dict, debug:bool=False) -> list:\n",
+    "    twoCategoryList = []\n",
+    "    functorDict = {}\n",
+    "    for o1 in zeroCells:\n",
+    "        for o2 in zeroCells:\n",
+    "            for o3 in zeroCells:\n",
+    "                if ((o1, o2) not in hom.keys()) or ((o2, o3) not in hom.keys()):\n",
+    "                    continue\n",
+    "                c1 = hom[(o1, o2)]\n",
+    "                c2 = hom[(o2, o3)]\n",
+    "                c3 = hom[(o1, o3)]\n",
+    "                thisProduct = productCategory(c2, c1)\n",
+    "                functorDict[(o1, o2, o3)] = enumerateFunctorsByObject(thisProduct, c3, 0)\n",
+    "\n",
+    "    functorKeyValueList = functorDict.items()\n",
+    "    functorList = [value for (key, value) in functorKeyValueList]\n",
+    "    objectTupleList = [key for (key, value) in functorKeyValueList]\n",
+    "    allComposition = itertools.product(*functorList)\n",
+    "    for thisComposition in allComposition:\n",
+    "        comp = {}\n",
+    "        try:\n",
+    "            for i,thisPair in enumerate(objectTupleList):\n",
+    "                comp[thisPair] = thisComposition[i]\n",
+    "\n",
+    "            potential2Category = StrictTwoCategory(zeroCells, hom, identityMap, comp, debug)\n",
+    "            twoCategoryList.append(potential2Category)\n",
+    "        except:\n",
+    "            pass\n",
+    "    return twoCategoryList\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(['0_0', '0_1'], {('0_0', '0_0'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_1', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_0', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'})}, {'0_0': '1_0', '0_1': '1_0'}, {('0_0', '0_0', '0_0'): {('1_0', '1_0'): '1_0'}\n",
+       " {('2_00_0', '2_00_0'): '2_00_0', ('2_00_1', '2_00_1'): '2_00_0', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_0', '2_00_1'): '2_00_1'}\n",
+       " , ('0_0', '0_0', '0_1'): {('1_0', '1_0'): '1_0'}\n",
+       " {('2_00_0', '2_00_0'): '2_00_0', ('2_00_1', '2_00_1'): '2_00_0', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_0', '2_00_1'): '2_00_1'}\n",
+       " , ('0_0', '0_1', '0_1'): {('1_0', '1_0'): '1_0'}\n",
+       " {('2_00_0', '2_00_0'): '2_00_0', ('2_00_1', '2_00_1'): '2_00_0', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_0', '2_00_1'): '2_00_1'}\n",
+       " , ('0_1', '0_1', '0_1'): {('1_0', '1_0'): '1_0'}\n",
+       " {('2_00_0', '2_00_0'): '2_00_0', ('2_00_1', '2_00_1'): '2_00_0', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_0', '2_00_1'): '2_00_1'}\n",
+       " })]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = enumerate2Categories(zeroCells, hom, identityMap)\n",
+    "temp"
    ]
   },
   {
