--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -18,6 +18,7 @@
    "source": [
     "#############   Category Class   ###############\n",
     "\n",
+    "# homsets: (object, object) --> list[morphisms]\n",
     "# src: morphism names --> object names\n",
     "# target: morphism names --> object names\n",
     "# comp: (morphism, morphism) --> morphism\n",
@@ -72,6 +73,7 @@
     "                            \"Composition: \" + str(self.comp),\n",
     "                            '\\n'])\n",
     "    \n",
+    "    # from homset data, make the src and target dictionaries\n",
     "    def sourceAndTargetMake(self) -> None:\n",
     "        for (src,target), morphismList in self.homsets.items():\n",
     "            for thisMorphism in morphismList:\n",
@@ -124,7 +126,7 @@
     "                    if (self.src[third] == self.target[second]) and (self.src[second] == self.target[first]):\n",
     "                        if self.comp[(third, self.comp[second, first])] != self.comp[(self.comp[third, second], first)]:\n",
     "                            if self.debug:\n",
-    "                                print(\"Associativty failure...\")\n",
+    "                                print(\"Associativity failure...\")\n",
     "                                print((third, second, first))\n",
     "                            return False\n",
     "        return True\n",
@@ -135,6 +137,7 @@
     "            thisMorphism = \"id_\" + str(thisObject)\n",
     "            self.identityMap[thisObject] = thisMorphism\n",
     "\n",
+    "    # from src and target data, make homset dictionary\n",
     "    def homsetMake(self) -> None:\n",
     "\n",
     "        for o1 in self.objects:\n",
@@ -379,7 +382,134 @@
     "# construct the identity dictionary for the product\n",
     "def identityMapProduct (c:Category, d:Category) -> dict:\n",
     "    identityMap = {(ob1, ob2): (id1, id2) for ob1,id1 in c.identityMap.items() for ob2,id2 in d.identityMap.items()}\n",
-    "    return identityMap"
+    "    return identityMap\n",
+    "\n",
+    "\n",
+    "##############  ENUMERATION OF ALL FUNCTORS BETWEEN TWO CATEGORIES  ###########\n",
+    "\n",
+    "\n",
+    "# WARNING: USUALLY INEFFICIENT!  functor enumeration by brute force over ALL maps from morphisms to morphisms\n",
+    "def enumerateFunctorsByMorphism(c:Category, d:Category, numToFind:int=0) -> list:\n",
+    "    functorList = []\n",
+    "    allFunctions = itertools.product(d.morphisms, repeat=len(c.morphisms))\n",
+    "    for thisFunction in allFunctions:\n",
+    "        morphismMap = dict(zip(c.morphisms, thisFunction))\n",
+    "        objectMap = objectMapFromMorphismMap(c, d, morphismMap)\n",
+    "        try:\n",
+    "            potentialFunctor = Functor(c, d, objectMap, morphismMap)\n",
+    "            functorList.append(potentialFunctor)\n",
+    "            if len(functorList) == numToFind:\n",
+    "                return functorList\n",
+    "        except AssertionError:\n",
+    "            pass\n",
+    "    return functorList\n",
+    "\n",
+    "# using the functor morphism map from category c to category d determine the object map\n",
+    "def objectMapFromMorphismMap(c:Category, d:Category, morphismMap:dict) -> dict:\n",
+    "    objectMap = []\n",
+    "    for cMorphism, dMorphism in morphismMap.items():\n",
+    "        srcPair = (c.src[cMorphism], d.src[dMorphism])\n",
+    "        objectMap.append(srcPair)\n",
+    "        targetPair = (c.target[cMorphism], d.target[dMorphism])\n",
+    "        objectMap.append(targetPair)\n",
+    "\n",
+    "    objectMap = dict(list(set(objectMap)))\n",
+    "    return objectMap\n",
+    "\n",
+    "# functor brute force enumeration by first mapping objects and then mapping morphisms consistently\n",
+    "def enumerateFunctorsByObject(c:Category, d:Category, numToFind: int=0) -> list:\n",
+    "    functorList = []\n",
+    "    allObjectFunctions = itertools.product(d.objects, repeat=len(c.objects))\n",
+    "    for thisFunction in allObjectFunctions:\n",
+    "        objectMap = dict(zip(c.objects, thisFunction))\n",
+    "\n",
+    "        # create morphismMap for potential functor\n",
+    "        \n",
+    "        cHomsets = list(c.homsets.items())\n",
+    "        homSetFunctions = []\n",
+    "        for (cSrc, cTarget),cMorphismList in cHomsets:\n",
+    "            dSrc = objectMap[cSrc]\n",
+    "            dTarget = objectMap[cTarget]\n",
+    "            thisDHomset = d.homsets[(dSrc, dTarget)]\n",
+    "            homSetFunctions.append(itertools.product(thisDHomset, repeat=len(cMorphismList)))\n",
+    "\n",
+    "        allMorphismFunctions =itertools.product(*homSetFunctions)\n",
+    "        for thisMorphismFunction in allMorphismFunctions:\n",
+    "            \n",
+    "            morphismMap = {}\n",
+    "            # map identities to identities\n",
+    "            for thisIdentity in c.identityMap.values():\n",
+    "                morphismMap[thisIdentity] = d.identityMap[objectMap[c.src[thisIdentity]]]\n",
+    "            \n",
+    "            thisMorphismFunction = list(thisMorphismFunction)\n",
+    "            for _, cMorphismList in cHomsets:\n",
+    "                thisDMorphismList = thisMorphismFunction.pop(0)  \n",
+    "                morphismMap.update(dict(zip(cMorphismList,thisDMorphismList)))\n",
+    "            try:\n",
+    "                potentialFunctor = Functor(c, d, objectMap, morphismMap)\n",
+    "                functorList.append(potentialFunctor)\n",
+    "                if len(functorList) == numToFind:\n",
+    "                    return functorList\n",
+    "            except AssertionError:\n",
+    "                pass\n",
+    "\n",
+    "    return functorList\n",
+    "\n",
+    "\n",
+    "#############   ENUMERATE 2-CATEGORY STRUCTURES   ############\n",
+    "\n",
+    "\n",
+    "# utility function for prepending strings in dictionary keys and values\n",
+    "def prependDictionary(myDict:dict, preString:str):\n",
+    "    newDict = {}\n",
+    "    for key, value in list(myDict.items()):\n",
+    "        if type(key) == tuple:\n",
+    "            newKey = tuple([preString + i for i in key])\n",
+    "        elif type(key) == str:\n",
+    "            newKey = preString + key\n",
+    "        else:\n",
+    "            print(\"Prepend warning...\")\n",
+    "\n",
+    "        if type(value) == tuple:\n",
+    "            newValue = tuple([preString + i for i in value])\n",
+    "        elif type(value) == str:\n",
+    "            newValue = preString + value\n",
+    "        else:\n",
+    "            print(\"Prepend warning...\")\n",
+    "        \n",
+    "        newDict[newKey] = newValue\n",
+    "    return newDict\n",
+    "\n",
+    "# enumerate all 2-category structures by enumerating all composition functors\n",
+    "def enumerate2Categories(zeroCells: list, hom:dict, identityMap:dict, debug:bool=False) -> list:\n",
+    "    twoCategoryList = []\n",
+    "    functorDict = {}\n",
+    "    for o1 in zeroCells:\n",
+    "        for o2 in zeroCells:\n",
+    "            for o3 in zeroCells:\n",
+    "                if ((o1, o2) not in hom.keys()) or ((o2, o3) not in hom.keys()):\n",
+    "                    continue\n",
+    "                c1 = hom[(o1, o2)]\n",
+    "                c2 = hom[(o2, o3)]\n",
+    "                c3 = hom[(o1, o3)]\n",
+    "                thisProduct = productCategory(c2, c1)\n",
+    "                functorDict[(o1, o2, o3)] = enumerateFunctorsByObject(thisProduct, c3, 0)\n",
+    "\n",
+    "    functorKeyValueList = functorDict.items()\n",
+    "    functorList = [value for (key, value) in functorKeyValueList]\n",
+    "    objectTupleList = [key for (key, value) in functorKeyValueList]\n",
+    "    allComposition = itertools.product(*functorList)\n",
+    "    for thisComposition in allComposition:\n",
+    "        comp = {}\n",
+    "        try:\n",
+    "            for i,thisPair in enumerate(objectTupleList):\n",
+    "                comp[thisPair] = thisComposition[i]\n",
+    "\n",
+    "            potential2Category = StrictTwoCategory(zeroCells, hom, identityMap, comp, debug)\n",
+    "            twoCategoryList.append(potential2Category)\n",
+    "        except:\n",
+    "            pass\n",
+    "    return twoCategoryList"
    ]
   },
   {
@@ -573,79 +703,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def enumerateFunctorsByMorphism(c:Category, d:Category, numToFind:int=0) -> list:\n",
-    "    functorList = []\n",
-    "    allFunctions = itertools.product(d.morphisms, repeat=len(c.morphisms))\n",
-    "    for thisFunction in allFunctions:\n",
-    "        morphismMap = dict(zip(c.morphisms, thisFunction))\n",
-    "        objectMap = objectMapFromMorphismMap(c, d, morphismMap)\n",
-    "        try:\n",
-    "            potentialFunctor = Functor(c, d, objectMap, morphismMap)\n",
-    "            functorList.append(potentialFunctor)\n",
-    "            if len(functorList) == numToFind:\n",
-    "                return functorList\n",
-    "        except AssertionError:\n",
-    "            pass\n",
-    "    return functorList\n",
-    "\n",
-    "def objectMapFromMorphismMap(c:Category, d:Category, morphismMap:dict) -> dict:\n",
-    "    objectMap = []\n",
-    "    for cMorphism, dMorphism in morphismMap.items():\n",
-    "        srcPair = (c.src[cMorphism], d.src[dMorphism])\n",
-    "        objectMap.append(srcPair)\n",
-    "        targetPair = (c.target[cMorphism], d.target[dMorphism])\n",
-    "        objectMap.append(targetPair)\n",
-    "\n",
-    "    objectMap = dict(list(set(objectMap)))\n",
-    "    return objectMap\n",
-    "\n",
-    "def enumerateFunctorsByObject(c:Category, d:Category, numToFind: int=0) -> list:\n",
-    "    functorList = []\n",
-    "    allObjectFunctions = itertools.product(d.objects, repeat=len(c.objects))\n",
-    "    for thisFunction in allObjectFunctions:\n",
-    "        objectMap = dict(zip(c.objects, thisFunction))\n",
-    "\n",
-    "        # create morphismMap for potential functor\n",
-    "        \n",
-    "        cHomsets = list(c.homsets.items())\n",
-    "        homSetFunctions = []\n",
-    "        for (cSrc, cTarget),cMorphismList in cHomsets:\n",
-    "            dSrc = objectMap[cSrc]\n",
-    "            dTarget = objectMap[cTarget]\n",
-    "            thisDHomset = d.homsets[(dSrc, dTarget)]\n",
-    "            homSetFunctions.append(itertools.product(thisDHomset, repeat=len(cMorphismList)))\n",
-    "\n",
-    "        allMorphismFunctions =itertools.product(*homSetFunctions)\n",
-    "        for thisMorphismFunction in allMorphismFunctions:\n",
-    "            \n",
-    "            morphismMap = {}\n",
-    "            # map identities to identities\n",
-    "            for thisIdentity in c.identityMap.values():\n",
-    "                morphismMap[thisIdentity] = d.identityMap[objectMap[c.src[thisIdentity]]]\n",
-    "            \n",
-    "            thisMorphismFunction = list(thisMorphismFunction)\n",
-    "            for _, cMorphismList in cHomsets:\n",
-    "                thisDMorphismList = thisMorphismFunction.pop(0)  \n",
-    "                morphismMap.update(dict(zip(cMorphismList,thisDMorphismList)))\n",
-    "            try:\n",
-    "                potentialFunctor = Functor(c, d, objectMap, morphismMap)\n",
-    "                functorList.append(potentialFunctor)\n",
-    "                if len(functorList) == numToFind:\n",
-    "                    return functorList\n",
-    "            except AssertionError:\n",
-    "                pass\n",
-    "\n",
-    "    return functorList"
+    "### Example: Enumerate all functors between two categories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1218,94 +1284,17 @@
    ],
    "source": [
     "functorList = enumerateFunctorsByObject(c1, c1, 0)\n",
-    "print(functorList)"
+    "print(functorList)\n",
+    "\n",
+    "# WARNING: INEFFICIENT\n",
+    "#functorList = enumerateFunctorsByMorphism(z2, z2, 0)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'1_0': '1_0'}\n",
-      "{'2_00_1': '2_00_1', '2_00_0': '2_00_0'}\n",
-      ", {'1_0': '1_0'}\n",
-      "{'2_00_1': '2_00_0', '2_00_0': '2_00_0'}\n",
-      "]\n"
-     ]
-    }
-   ],
    "source": [
-    "functorList = enumerateFunctorsByMorphism(z2, z2, 0)\n",
-    "print(functorList)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# utility function for prepending strings in dictionary keys and values\n",
-    "def prependDictionary(myDict:dict, preString:str):\n",
-    "    newDict = {}\n",
-    "    for key, value in list(myDict.items()):\n",
-    "        if type(key) == tuple:\n",
-    "            newKey = tuple([preString + i for i in key])\n",
-    "        elif type(key) == str:\n",
-    "            newKey = preString + key\n",
-    "        else:\n",
-    "            print(\"Prepend warning...\")\n",
-    "\n",
-    "        if type(value) == tuple:\n",
-    "            newValue = tuple([preString + i for i in value])\n",
-    "        elif type(value) == str:\n",
-    "            newValue = preString + value\n",
-    "        else:\n",
-    "            print(\"Prepend warning...\")\n",
-    "        \n",
-    "        newDict[newKey] = newValue\n",
-    "    return newDict\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def enumerate2Categories(zeroCells: list, hom:dict, identityMap:dict, debug:bool=False) -> list:\n",
-    "    twoCategoryList = []\n",
-    "    functorDict = {}\n",
-    "    for o1 in zeroCells:\n",
-    "        for o2 in zeroCells:\n",
-    "            for o3 in zeroCells:\n",
-    "                if ((o1, o2) not in hom.keys()) or ((o2, o3) not in hom.keys()):\n",
-    "                    continue\n",
-    "                c1 = hom[(o1, o2)]\n",
-    "                c2 = hom[(o2, o3)]\n",
-    "                c3 = hom[(o1, o3)]\n",
-    "                thisProduct = productCategory(c2, c1)\n",
-    "                functorDict[(o1, o2, o3)] = enumerateFunctorsByObject(thisProduct, c3, 0)\n",
-    "\n",
-    "    functorKeyValueList = functorDict.items()\n",
-    "    functorList = [value for (key, value) in functorKeyValueList]\n",
-    "    objectTupleList = [key for (key, value) in functorKeyValueList]\n",
-    "    allComposition = itertools.product(*functorList)\n",
-    "    for thisComposition in allComposition:\n",
-    "        comp = {}\n",
-    "        try:\n",
-    "            for i,thisPair in enumerate(objectTupleList):\n",
-    "                comp[thisPair] = thisComposition[i]\n",
-    "\n",
-    "            potential2Category = StrictTwoCategory(zeroCells, hom, identityMap, comp, debug)\n",
-    "            twoCategoryList.append(potential2Category)\n",
-    "        except:\n",
-    "            pass\n",
-    "    return twoCategoryList"
+    "### Example: Enumerate all 2-category structures"
    ]
   },
   {
