--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1396,8 +1396,8 @@
     }
    ],
    "source": [
-    "temp = enumerate2Categories(zeroCells, hom, identityMap)\n",
-    "print(temp)"
+    "twoCategoryList = enumerate2Categories(zeroCells, hom, identityMap)\n",
+    "print(twoCategoryList)"
    ]
   },
   {
