--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,6 @@
     "        self.src = src\n",
     "        self.target = target\n",
     "        self.comp = comp\n",
-    "        self.objects = set(src.values()).union(set(target.values()))\n",
-    "        self.morphisms = list(src.keys())\n",
     "        self.identityMap = identityMap\n",
     "        self.debug = debug\n",
     "        self.homsets = homsets\n",
@@ -51,9 +49,13 @@
     "        if identityMap == {}:\n",
     "            self.addIdentities()\n",
     "\n",
+    "        # make object and morphism lists\n",
+    "        self.objects = set(src.values()).union(set(target.values()))\n",
+    "        self.morphisms = list(src.keys())\n",
+    "\n",
     "        # complete data in src, target, comp for identities\n",
     "        self.completeIdentities()\n",
-    "\n",
+    "        \n",
     "        # if data given as src and target dictionaries then make the homsets\n",
     "        if self.homsets == {}:\n",
     "            self.homsetMake()\n",
@@ -526,22 +528,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define two identical categories and their product\n",
+    "'''\n",
     "src = {\"f\":0, \"g\":1, \"h\":2, \"i\":0, \"m\":0, \"k\":1}\n",
     "target = {\"f\":1, \"g\":2, \"h\":3, \"i\":2, \"m\":3, \"k\":3}\n",
     "comp = {(\"g\",\"f\"): \"i\", (\"h\", \"g\"):\"k\", (\"h\",\"i\"): \"m\", (\"k\",\"f\"): \"m\"}\n",
+    "'''\n",
     "\n",
-    "c1 = Category({}, src, target, comp, {}, '4')\n",
-    "c2 = Category({}, src, target, comp, {}, '4')\n",
+    "homsets = {('0_0','0_0'): ['1_0_0_0'],\n",
+    "           ('0_1','0_1'): ['1_1_1_0'],\n",
+    "           ('0_2','0_2'): ['1_2_2_0'],\n",
+    "           ('0_3','0_3'): ['1_3_3_0'],\n",
+    "           ('0_0','0_1'): ['1_0_1_0'],\n",
+    "           ('0_1','0_2'): ['1_1_2_0'],\n",
+    "           ('0_2','0_3'): ['1_2_3_0'],\n",
+    "           ('0_0','0_2'): ['1_0_2_0'],\n",
+    "           ('0_0','0_3'): ['1_0_3_0'],\n",
+    "           ('0_1','0_3'): ['1_1_3_0']}\n",
+    "\n",
+    "comp = {('1_1_2_0','1_0_1_0'): '1_0_2_0',\n",
+    "        ('1_2_3_0','1_1_2_0'): '1_1_3_0',\n",
+    "        ('1_2_3_0','1_0_2_0'): '1_0_3_0',\n",
+    "        ('1_1_3_0','1_0_1_0'): '1_0_3_0'}\n",
+    "\n",
+    "identityMap = {'0_0': '1_0_0_0',\n",
+    "               '0_1': '1_1_1_0',\n",
+    "               '0_2': '1_2_2_0',\n",
+    "               '0_3': '1_3_3_0'}\n",
+    "\n",
+    "c1 = Category(homsets, {}, {}, comp, identityMap, '4')\n",
+    "c2 = Category(homsets, {}, {}, comp, identityMap, '4')\n",
     "\n",
     "productC1C2 = productCategory(c1, c2)\n",
     "\n",
     "# define the identity functor\n",
-    "objectMap = {0:0, 1:1, 2:2, 3:3}\n",
+    "objectMap = {i:i for i in c1.objects}\n",
     "morphismMap = {i:i for i in c1.morphisms}\n",
     "F = Functor(c1, c2, objectMap, morphismMap)\n",
     "\n",
@@ -1059,6 +1084,44 @@
    "source": [
     "twoCategoryList = enumerate2Categories(zeroCells, hom, identityMap)\n",
     "print(twoCategoryList[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def modifyObject(object, src, target):\n",
+    "    return '1_' + src + '_' + target + '_' + object[2:]\n",
+    "\n",
+    "def modifyMorphism(morphism):\n",
+    "    return '2_' + src + '_' + target + '_' + morphism[2:]\n",
+    "\n",
+    "def modifyHomsets(homsets, objectMap, morphismMap):\n",
+    "    return {(objectMap[src], objectMap[target]):[morphismMap[thisMorphism] for thisMorphism in morphismList] \n",
+    "            for (src, target),morphismList in homsets.items()}\n",
+    "\n",
+    "def modifyComp(comp, objectMap, morphismMap):\n",
+    "    return {(morphismMap[morphism1], morphismMap[morphism2]):morphismMap[compMorphism] for (morphism1, morphism2), compMorphism in comp.items()}\n",
+    "\n",
+    "def modifyIdentityMap(identityMap, objectMap, morphismMap):\n",
+    "    return {objectMap[thisObject]:morphismMap[thisIdentity] for thisObject, thisIdentity in identityMap.items()}\n",
+    "\n",
+    "def relabelCategory(cat:Category, src:str, target:str):\n",
+    "    objects = cat.objects\n",
+    "    morphisms = cat.morphisms\n",
+    "\n",
+    "    objectMap = {thisObject: modifyObject(thisObject, src, target) for thisObject in objects}\n",
+    "    morphismMap = {thisMorphism: modifyMorphism(thisMorphism) for thisMorphism in morphisms}\n",
+    "\n",
+    "    homsets = modifyHomsets(cat.homsets, objectMap, morphismMap)\n",
+    "    comp = modifyComp(cat.comp, objectMap, morphismMap)\n",
+    "    identityMap = modifyIdentityMap(cat.identityMap, objectMap, morphismMap)\n",
+    "    name = cat.name + '_r'\n",
+    "\n",
+    "    relabeledCategory = Category(homsets, comp, identityMap, name)\n",
+    "    return relabeledCategory"
    ]
   },
   {
