--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,26 +538,26 @@
     "comp = {(\"g\",\"f\"): \"i\", (\"h\", \"g\"):\"k\", (\"h\",\"i\"): \"m\", (\"k\",\"f\"): \"m\"}\n",
     "'''\n",
     "\n",
-    "homsets = {('0_0','0_0'): ['1_0_0_0'],\n",
-    "           ('0_1','0_1'): ['1_1_1_0'],\n",
-    "           ('0_2','0_2'): ['1_2_2_0'],\n",
-    "           ('0_3','0_3'): ['1_3_3_0'],\n",
-    "           ('0_0','0_1'): ['1_0_1_0'],\n",
-    "           ('0_1','0_2'): ['1_1_2_0'],\n",
-    "           ('0_2','0_3'): ['1_2_3_0'],\n",
-    "           ('0_0','0_2'): ['1_0_2_0'],\n",
-    "           ('0_0','0_3'): ['1_0_3_0'],\n",
-    "           ('0_1','0_3'): ['1_1_3_0']}\n",
+    "homsets = {('0_0','0_0'): ['1_0->0_0'],\n",
+    "           ('0_1','0_1'): ['1_1->1_0'],\n",
+    "           ('0_2','0_2'): ['1_2->2_0'],\n",
+    "           ('0_3','0_3'): ['1_3->3_0'],\n",
+    "           ('0_0','0_1'): ['1_0->1_0'],\n",
+    "           ('0_1','0_2'): ['1_1->2_0'],\n",
+    "           ('0_2','0_3'): ['1_2->3_0'],\n",
+    "           ('0_0','0_2'): ['1_0->2_0'],\n",
+    "           ('0_0','0_3'): ['1_0->3_0'],\n",
+    "           ('0_1','0_3'): ['1_1->3_0']}\n",
     "\n",
-    "comp = {('1_1_2_0','1_0_1_0'): '1_0_2_0',\n",
-    "        ('1_2_3_0','1_1_2_0'): '1_1_3_0',\n",
-    "        ('1_2_3_0','1_0_2_0'): '1_0_3_0',\n",
-    "        ('1_1_3_0','1_0_1_0'): '1_0_3_0'}\n",
+    "comp = {('1_1->2_0','1_0->1_0'): '1_0->2_0',\n",
+    "        ('1_2->3_0','1_1->2_0'): '1_1->3_0',\n",
+    "        ('1_2->3_0','1_0->2_0'): '1_0->3_0',\n",
+    "        ('1_1->3_0','1_0->1_0'): '1_0->3_0'}\n",
     "\n",
-    "identityMap = {'0_0': '1_0_0_0',\n",
-    "               '0_1': '1_1_1_0',\n",
-    "               '0_2': '1_2_2_0',\n",
-    "               '0_3': '1_3_3_0'}\n",
+    "identityMap = {'0_0': '1_0->0_0',\n",
+    "               '0_1': '1_1->1_0',\n",
+    "               '0_2': '1_2->2_0',\n",
+    "               '0_3': '1_3->3_0'}\n",
     "\n",
     "c1 = Category(homsets, {}, {}, comp, identityMap, '4')\n",
     "c2 = Category(homsets, {}, {}, comp, identityMap, '4')\n",
@@ -1087,15 +1087,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def modifyObject(object, src, target):\n",
-    "    return '1_' + src + '_' + target + '_' + object[2:]\n",
+    "    return '1_' + src + '->' + target + '_' + object[2:]\n",
     "\n",
     "def modifyMorphism(morphism, src, target):\n",
-    "    return '2_' + src + '_' + target + '_' + morphism[2:]\n",
+    "    return '2_' + src + '->' + target + '_' + morphism[2:].replace('->','=>')\n",
     "\n",
     "def modifyHomsets(homsets, objectMap, morphismMap):\n",
     "    return {(objectMap[src], objectMap[target]):[morphismMap[thisMorphism] for thisMorphism in morphismList] \n",
@@ -1125,20 +1125,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Category: \n",
-       "Homsets: {('1_2_5_0', '1_2_5_0'): ['2_2_5_0_0_0'], ('1_2_5_1', '1_2_5_1'): ['2_2_5_1_1_0'], ('1_2_5_2', '1_2_5_2'): ['2_2_5_2_2_0'], ('1_2_5_3', '1_2_5_3'): ['2_2_5_3_3_0'], ('1_2_5_0', '1_2_5_1'): ['2_2_5_0_1_0'], ('1_2_5_1', '1_2_5_2'): ['2_2_5_1_2_0'], ('1_2_5_2', '1_2_5_3'): ['2_2_5_2_3_0'], ('1_2_5_0', '1_2_5_2'): ['2_2_5_0_2_0'], ('1_2_5_0', '1_2_5_3'): ['2_2_5_0_3_0'], ('1_2_5_1', '1_2_5_3'): ['2_2_5_1_3_0'], ('1_2_5_3', '1_2_5_0'): [], ('1_2_5_3', '1_2_5_1'): [], ('1_2_5_3', '1_2_5_2'): [], ('1_2_5_1', '1_2_5_0'): [], ('1_2_5_2', '1_2_5_0'): [], ('1_2_5_2', '1_2_5_1'): []}\n",
-       "Identity map: {'1_2_5_0': '2_2_5_0_0_0', '1_2_5_1': '2_2_5_1_1_0', '1_2_5_2': '2_2_5_2_2_0', '1_2_5_3': '2_2_5_3_3_0'}\n",
-       "Composition: {('2_2_5_1_2_0', '2_2_5_0_1_0'): '2_2_5_0_2_0', ('2_2_5_2_3_0', '2_2_5_1_2_0'): '2_2_5_1_3_0', ('2_2_5_2_3_0', '2_2_5_0_2_0'): '2_2_5_0_3_0', ('2_2_5_1_3_0', '2_2_5_0_1_0'): '2_2_5_0_3_0', ('2_2_5_3_3_0', '2_2_5_3_3_0'): '2_2_5_3_3_0', ('2_2_5_3_3_0', '2_2_5_2_3_0'): '2_2_5_2_3_0', ('2_2_5_3_3_0', '2_2_5_0_3_0'): '2_2_5_0_3_0', ('2_2_5_3_3_0', '2_2_5_1_3_0'): '2_2_5_1_3_0', ('2_2_5_0_0_0', '2_2_5_0_0_0'): '2_2_5_0_0_0', ('2_2_5_0_1_0', '2_2_5_0_0_0'): '2_2_5_0_1_0', ('2_2_5_0_2_0', '2_2_5_0_0_0'): '2_2_5_0_2_0', ('2_2_5_0_3_0', '2_2_5_0_0_0'): '2_2_5_0_3_0', ('2_2_5_1_1_0', '2_2_5_1_1_0'): '2_2_5_1_1_0', ('2_2_5_1_1_0', '2_2_5_0_1_0'): '2_2_5_0_1_0', ('2_2_5_1_2_0', '2_2_5_1_1_0'): '2_2_5_1_2_0', ('2_2_5_1_3_0', '2_2_5_1_1_0'): '2_2_5_1_3_0', ('2_2_5_2_2_0', '2_2_5_2_2_0'): '2_2_5_2_2_0', ('2_2_5_2_2_0', '2_2_5_1_2_0'): '2_2_5_1_2_0', ('2_2_5_2_3_0', '2_2_5_2_2_0'): '2_2_5_2_3_0', ('2_2_5_2_2_0', '2_2_5_0_2_0'): '2_2_5_0_2_0'}\n",
+       "Homsets: {('0_0', '0_0'): ['1_0->0_0'], ('0_1', '0_1'): ['1_1->1_0'], ('0_2', '0_2'): ['1_2->2_0'], ('0_3', '0_3'): ['1_3->3_0'], ('0_0', '0_1'): ['1_0->1_0'], ('0_1', '0_2'): ['1_1->2_0'], ('0_2', '0_3'): ['1_2->3_0'], ('0_0', '0_2'): ['1_0->2_0'], ('0_0', '0_3'): ['1_0->3_0'], ('0_1', '0_3'): ['1_1->3_0'], ('0_3', '0_0'): [], ('0_3', '0_1'): [], ('0_3', '0_2'): [], ('0_1', '0_0'): [], ('0_2', '0_0'): [], ('0_2', '0_1'): []}\n",
+       "Identity map: {'0_0': '1_0->0_0', '0_1': '1_1->1_0', '0_2': '1_2->2_0', '0_3': '1_3->3_0'}\n",
+       "Composition: {('1_1->2_0', '1_0->1_0'): '1_0->2_0', ('1_2->3_0', '1_1->2_0'): '1_1->3_0', ('1_2->3_0', '1_0->2_0'): '1_0->3_0', ('1_1->3_0', '1_0->1_0'): '1_0->3_0', ('1_3->3_0', '1_3->3_0'): '1_3->3_0', ('1_3->3_0', '1_2->3_0'): '1_2->3_0', ('1_3->3_0', '1_0->3_0'): '1_0->3_0', ('1_3->3_0', '1_1->3_0'): '1_1->3_0', ('1_0->0_0', '1_0->0_0'): '1_0->0_0', ('1_0->1_0', '1_0->0_0'): '1_0->1_0', ('1_0->2_0', '1_0->0_0'): '1_0->2_0', ('1_0->3_0', '1_0->0_0'): '1_0->3_0', ('1_1->1_0', '1_1->1_0'): '1_1->1_0', ('1_1->1_0', '1_0->1_0'): '1_0->1_0', ('1_1->2_0', '1_1->1_0'): '1_1->2_0', ('1_1->3_0', '1_1->1_0'): '1_1->3_0', ('1_2->2_0', '1_2->2_0'): '1_2->2_0', ('1_2->2_0', '1_1->2_0'): '1_1->2_0', ('1_2->3_0', '1_2->2_0'): '1_2->3_0', ('1_2->2_0', '1_0->2_0'): '1_0->2_0'}\n",
+       "Name: 4"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Category: \n",
+       "Homsets: {('1_2->5_0', '1_2->5_0'): ['2_2->5_0=>0_0'], ('1_2->5_1', '1_2->5_1'): ['2_2->5_1=>1_0'], ('1_2->5_2', '1_2->5_2'): ['2_2->5_2=>2_0'], ('1_2->5_3', '1_2->5_3'): ['2_2->5_3=>3_0'], ('1_2->5_0', '1_2->5_1'): ['2_2->5_0=>1_0'], ('1_2->5_1', '1_2->5_2'): ['2_2->5_1=>2_0'], ('1_2->5_2', '1_2->5_3'): ['2_2->5_2=>3_0'], ('1_2->5_0', '1_2->5_2'): ['2_2->5_0=>2_0'], ('1_2->5_0', '1_2->5_3'): ['2_2->5_0=>3_0'], ('1_2->5_1', '1_2->5_3'): ['2_2->5_1=>3_0'], ('1_2->5_3', '1_2->5_0'): [], ('1_2->5_3', '1_2->5_1'): [], ('1_2->5_3', '1_2->5_2'): [], ('1_2->5_1', '1_2->5_0'): [], ('1_2->5_2', '1_2->5_0'): [], ('1_2->5_2', '1_2->5_1'): []}\n",
+       "Identity map: {'1_2->5_0': '2_2->5_0=>0_0', '1_2->5_1': '2_2->5_1=>1_0', '1_2->5_2': '2_2->5_2=>2_0', '1_2->5_3': '2_2->5_3=>3_0'}\n",
+       "Composition: {('2_2->5_1=>2_0', '2_2->5_0=>1_0'): '2_2->5_0=>2_0', ('2_2->5_2=>3_0', '2_2->5_1=>2_0'): '2_2->5_1=>3_0', ('2_2->5_2=>3_0', '2_2->5_0=>2_0'): '2_2->5_0=>3_0', ('2_2->5_1=>3_0', '2_2->5_0=>1_0'): '2_2->5_0=>3_0', ('2_2->5_3=>3_0', '2_2->5_3=>3_0'): '2_2->5_3=>3_0', ('2_2->5_3=>3_0', '2_2->5_2=>3_0'): '2_2->5_2=>3_0', ('2_2->5_3=>3_0', '2_2->5_0=>3_0'): '2_2->5_0=>3_0', ('2_2->5_3=>3_0', '2_2->5_1=>3_0'): '2_2->5_1=>3_0', ('2_2->5_0=>0_0', '2_2->5_0=>0_0'): '2_2->5_0=>0_0', ('2_2->5_0=>1_0', '2_2->5_0=>0_0'): '2_2->5_0=>1_0', ('2_2->5_0=>2_0', '2_2->5_0=>0_0'): '2_2->5_0=>2_0', ('2_2->5_0=>3_0', '2_2->5_0=>0_0'): '2_2->5_0=>3_0', ('2_2->5_1=>1_0', '2_2->5_1=>1_0'): '2_2->5_1=>1_0', ('2_2->5_1=>1_0', '2_2->5_0=>1_0'): '2_2->5_0=>1_0', ('2_2->5_1=>2_0', '2_2->5_1=>1_0'): '2_2->5_1=>2_0', ('2_2->5_1=>3_0', '2_2->5_1=>1_0'): '2_2->5_1=>3_0', ('2_2->5_2=>2_0', '2_2->5_2=>2_0'): '2_2->5_2=>2_0', ('2_2->5_2=>2_0', '2_2->5_1=>2_0'): '2_2->5_1=>2_0', ('2_2->5_2=>3_0', '2_2->5_2=>2_0'): '2_2->5_2=>3_0', ('2_2->5_2=>2_0', '2_2->5_0=>2_0'): '2_2->5_0=>2_0'}\n",
        "Name: 4_r"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
